// SPDX-FileCopyrightText: 2023 Steffen Vogel <post@steffenvogel.de>
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package cunicu;
option go_package = "github.com/stv0g/cunicu/pkg/proto";

message Empty {}

// An UNIX timestamp since 1970-01-01 (UTC)
message Timestamp {
    int32 seconds = 1;
    int32 nanos = 2;
}

message BuildInfo {
	string version = 1;
	Timestamp date = 2;
	string commit = 3;
	string tag = 4;
	string branch = 5;
	string built_by = 6;
	string os = 7;
	string arch = 8;
	bool dirty = 9;
}

message BuildInfos {
	BuildInfo client = 1;
	BuildInfo daemon = 2;
}